--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BNB Greenfield Data Marketplace</title>
+    <title>MindPress Data Marketplace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
